<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/action_home" />
        <item
            android:id="@+id/nav_add_to_card"
            android:icon="@drawable/ic_menu_add_to_cart"
            android:title="@string/action_add_to_cart" />
        <item
            android:id="@+id/nav_order_history"
            android:icon="@drawable/ic_menu_add_to_cart"
            android:title="@string/action_order_history" />
        <item
            android:id="@+id/nav_purchase_items"
            android:icon="@drawable/ic_menu_add_to_cart"
            android:title="@string/action_purchase_items" />
        <item
            android:id="@+id/nav_change_password"
            android:icon="@drawable/ic_menu_contact_us"
            android:title="@string/action_change_password" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_menu_about_us"
            android:title="@string/action_about_us" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_menu_notification"
            android:title="@string/action_notifications" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/action_help" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/action_logout" />
    </group>

</menu>
