<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/coordinatorLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:id="@+id/rlPresentData"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/inToolbar"
            layout="@layout/custom_toolbar" />

        <LinearLayout
            android:layout_below="@+id/inToolbar"
            android:layout_above="@+id/bottomLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/small">

            <LinearLayout
                android:id="@+id/llUserAnotherDebitCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small"
                android:layout_marginRight="@dimen/small"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_payment_another_card"
                    android:layout_height="wrap_content" />

                <android.support.v7.widget.AppCompatTextView
                    style="@style/TextSemiBoldSizeMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/small"
                    android:text="@string/use_another_debit_card"
                    android:textColor="@color/colorNormalEditText" />

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/appIvSelectAnotherCard"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_marginRight="@dimen/small"
                    app:srcCompat="@drawable/ic_circle_unselect"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/cvDebitCardShow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small"
                app:cardBackgroundColor="@color/colorCardViewBackground"
                app:cardCornerRadius="@dimen/extraTiny"
                app:cardElevation="@dimen/extraTiny"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/small">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small"
                        android:orientation="vertical">

                        <android.support.v7.widget.AppCompatTextView
                            style="@style/TextRegularSizeRegular"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/debit_card"
                            android:textColor="@color/colorNormalEditText" />


                        <android.support.v7.widget.AppCompatEditText
                            style="@style/styleEditTextPayment"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:hint="@string/card_number"
                            android:inputType="number"
                            android:maxLines="1" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/medium"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:orientation="vertical">

                            <android.support.v7.widget.AppCompatTextView
                                style="@style/TextRegularSizeRegular"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/valid_up_to"
                                android:textColor="@color/colorNormalEditText" />


                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <android.support.v7.widget.AppCompatEditText
                                    style="@style/styleEditTextPayment"
                                    android:layout_width="70dp"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:hint="@string/hint_mm"
                                    android:inputType="number"
                                    android:maxLines="1" />

                                <android.support.v7.widget.AppCompatEditText
                                    style="@style/styleEditTextPayment"
                                    android:layout_width="70dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="@dimen/small"
                                    android:gravity="center"
                                    android:hint="@string/hint_yy"
                                    android:inputType="number"
                                    android:maxLines="1" />
                            </LinearLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:gravity="right"
                            android:orientation="vertical">

                            <android.support.v7.widget.AppCompatTextView
                                style="@style/TextRegularSizeRegular"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/cvv_code"
                                android:textColor="@color/colorNormalEditText" />

                            <android.support.v7.widget.AppCompatEditText
                                style="@style/styleEditTextPayment"
                                android:layout_width="70dp"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:inputType="number"
                                android:maxLines="1" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@id/bottomLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/small"
                    android:text="@string/select_items" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/appTvSelectCategoryTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="0"
                    android:textColor="@color/colorPrimary" />
            </RelativeLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/appBtnPayment"
                style="@style/BlueButtonTheme"
                android:layout_width="match_parent"
                android:layout_height="@dimen/hugeSmall"
                android:text="@string/btn_payment" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlNoData"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <include layout="@layout/custom_no_data" />
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
