<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/small"
    app:cardBackgroundColor="@color/colorCardViewBackground"
    app:cardCornerRadius="@dimen/extraTiny"
    app:cardElevation="@dimen/extraTiny"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/appTvProductId"
                    style="@style/TextSemiBoldSizeRegular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:padding="@dimen/small"
                    android:text="@string/product_id"
                    android:textColor="@color/colorBlack" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/appTvDetails"
                    style="@style/TextRegularSizeSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:padding="@dimen/small"
                    android:text="@string/details"
                    android:textColor="@color/colorLink" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/appIvImagePurchase"
                        android:layout_width="@dimen/dimen_product"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:background="@color/colorPrimary"
                        android:padding="@dimen/extraTiny" />

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="@dimen/huge"
                        android:layout_height="@dimen/huge"
                        android:layout_centerInParent="true"
                        android:visibility="visible" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="@dimen/small">

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/appTvCompanyName"
                            style="@style/TextSemiBoldSizeRegular"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:text="@string/company_name"
                            android:textColor="@color/colorBlack" />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/appTvProductName"
                            style="@style/TextRegularSizeMedium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/small"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:text="@string/product_name"
                            android:textColor="@color/colorBlack" />

                        <android.support.v7.widget.AppCompatRatingBar
                            style="?android:attr/ratingBarStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/small"
                            android:numStars="5"
                            android:rating="0"
                            android:theme="@style/RatingBarTheme" />

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/appllAddToCartSelect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/small"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/appIvAddToCartSelect"
                    style="@style/TextRegularSizeSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_check_box_select1" />

                <android.support.v7.widget.AppCompatTextView
                    style="@style/TextRegularSizeRegular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/add_to_cart"
                    android:textColor="@color/colorBlack" />

            </LinearLayout>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/appTvStatus"
                style="@style/TextRegularSizeRegular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/small"
                android:ellipsize="end"
                android:gravity="right"
                android:text="@string/stock"
                android:textColor="@color/colorBlack" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small"
                android:orientation="horizontal"
                android:weightSum="1">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatTextView
                        style="@style/TextRegularSizeMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/medium_text" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/appTvPrice"
                        style="@style/TextRegularSizeMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/small"
                        android:text="@string/price"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/medium_text" />
                </LinearLayout>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/appTvItems"
                    style="@style/TextRegularSizeRegular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/small"
                    android:text="@string/discount_discount"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack" />

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>



