<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/small"
    app:cardElevation="0.2dp"
    app:cardBackgroundColor="@color/colorCardViewBackground"
    app:cardCornerRadius="@dimen/extraTiny">

    <RelativeLayout
        android:id="@+id/list_row"
        android:layout_width="match_parent"
        android:padding="@dimen/small"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="1"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/llAccountDetails"
                android:layout_width="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/small"
                android:layout_marginBottom="@dimen/small"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/appTvAccountNo"
                    style="@style/TextRegularSizeRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/account_no"
                    android:textColor="@color/colorNormalEditText" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/appTvPayment"
                    style="@style/TextRegularSizeSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_payment"
                    android:textColor="@color/colorNormalEditText" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/appEdtCVV"
                    style="@style/styleEditTextPayment"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/small"
                    android:gravity="center"
                    android:maxLength="3"
                    android:hint="@string/hint_cvv"
                    android:inputType="numberPassword"
                    android:maxLines="1" />

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/appIvSelect"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="@dimen/small"
                    app:srcCompat="@drawable/ic_circle_unselect"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>

